[gd_scene load_steps=5 format=3 uid="uid://c3q5o7h8v1j6w"]

[ext_resource type="Script" uid="uid://chnl2ab2xkmt6" path="res://ui/item_row.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cojmge4b1py4d" path="res://icons/blue_shoppingbags.svg" id="2_sprvt"]
[ext_resource type="Script" uid="uid://b06ev4v6kt23h" path="res://ui/name_label.gd" id="4_4w63c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sprvt"]
content_margin_top = 1.0
content_margin_bottom = 1.0

[node name="ItemContainer" type="PanelContainer"]
offset_top = 1280.0
offset_right = 720.0
offset_bottom = 1280.0
size_flags_horizontal = 3
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemRow" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ItemRow"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
mouse_filter = 1
theme_override_styles/separator = SubResource("StyleBoxFlat_sprvt")

[node name="MainLine" type="HBoxContainer" parent="VBoxContainer/ItemRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="NeedCheck" type="Button" parent="VBoxContainer/ItemRow/MainLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/icon_max_width = 30
toggle_mode = true
text = "1.5

litre"
icon = ExtResource("2_sprvt")
text_overrun_behavior = 1
icon_alignment = 1
expand_icon = true

[node name="NameLabel" type="Label" parent="VBoxContainer/ItemRow/MainLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 3.0
text = "ITEMNAME"
autowrap_mode = 3
max_lines_visible = 3
script = ExtResource("4_4w63c")

[node name="CategoryLabel" type="Label" parent="VBoxContainer/ItemRow/MainLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_type_variation = &"CategoryLabel"
text = "category"

[node name="PriceButton" type="Button" parent="VBoxContainer/ItemRow/MainLine"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 8
text = "0.00 â‚¬"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/ItemRow"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 20)
layout_mode = 2
size_flags_horizontal = 3
text = "no desc"
autowrap_mode = 3
max_lines_visible = 2

[node name="inCartPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0.731, 0.23, 0.503)
layout_mode = 2
mouse_filter = 2
